--- a/ninjas-desapareciendo.html
+++ b/ninjas-desapareciendo.html
@@ -58,7 +58,7 @@
             $(this).slideUp()
         });
         $('#btn-restore').on('click',function(){
-            $('img').slideDown()
+            $('img').fadeIn()
         });
     </script>
 </body>
