Se agrega sonido a los eventos click en el ninja desapareciendo

--- a/ninjas-desapareciendo.html
+++ b/ninjas-desapareciendo.html
@@ -14,6 +14,9 @@
           width: 250px;
           border: 2px solid black;
       }
+      audio{
+          display: none;
+      }
   </style>
 </head>
 <body>
@@ -51,11 +54,13 @@
                 <img src="https://arc-anglerfish-arc2-prod-gruporepublica.s3.amazonaws.com/public/NUEJ3SARHJEAFCRMZ6KRH4LGQE.jpg" alt="">
             </div>
         </div>
+        <audio id="audio" src="samurai-1.mp3" type="audio/mp3"></audio>
         <button class="btn btn-success" id="btn-restore">Restore</button>
     </div>
     <script>
         $('img').on('click',function(){
             $(this).slideUp()
+            $('#audio')[0].play()
         });
         $('#btn-restore').on('click',function(){
             $('img').fadeIn()
